syntax = "proto3";

package mantrae.v1;

enum ProtocolType {
  PROTOCOL_TYPE_UNSPECIFIED = 0;
  PROTOCOL_TYPE_HTTP = 1;
  PROTOCOL_TYPE_TCP = 2;
  PROTOCOL_TYPE_UDP = 3;
}
